--- a/style.css
+++ b/style.css
@@ -15,6 +15,6 @@
     height: 70rem;
   }
 
-body {background-color: #eceff4;
-      color: #2e3440;
-      font-family: 'Roboto', sans-serif;}
+h1 {
+  padding-left: 1rem;
+}
